--- a/client/index.html
+++ b/client/index.html
@@ -4,9 +4,10 @@
         <meta charset="utf-8">
         <title>NewsSight</title>
         <!-- Sylesheets -->
+        <link rel="stylesheet" type="text/css" href="css/main.css">
     </head>
     <body>
         <div id="app"></div>
-        <script src="dist/bundle.js"></script>
+        <script src="js/bundle.js"></script>
     </body>
 </html>
