--- a/client/html/home.html
+++ b/client/html/home.html
@@ -7,7 +7,13 @@
         <link rel="stylesheet" type="text/css" href="css/main.css">
     </head>
     <body>
-        <div id="app"></div>
-        <script src="js/bundle.js"></script>
+        <div id="nav"></div>
+
+        <div id="main">
+            
+        </div>
+        
+        <div id="footer"></div>
+        <script src="js/home.bundle.js"></script>
     </body>
 </html>
